# trig_distort_vst

./: CMakeLists.txt  README.md  controller.cpp  controller.h  factory.cpp  ids.h  processor.cpp  processor.h
